    - The Points Convert SOP now reports NaN Positions as warnings when
      converting from Houdini Points to VDB Points.
    - Fixed a bug where the Points Convert SOP was incorrectly ignoring
      point attributes with the same name as an existing point group.
    - The Transform SOP now supports frustum transforms by applying the
      transformation to the internal affine map.

    Python:
    - Added limited support for PointDataGrids to the Python module,
      offering I/O and metadata functionality for now.


Version 6.0.0 - December 18, 2018

      Some changes in this release (see "ABI changes" below) alter
      the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones built into Houdini
      up to and including Houdini 17.  To preserve ABI compatibility,
      when compiling OpenVDB or any dependent code define the macro
      OPENVDB_ABI_VERSION_NUMBER=N, where, for example, N is 3 for
      Houdini 15, 15.5 and 16, 4 for Houdini 16.5 and 5 for Houdini 17.0

    New features:
    - Added support to the ParticlesToLevelSet tool for fast rasterization
      of particles into boolean mask grids.
    - Added convenience functions particlesToSdf(), particleTrailsToSdf(),
      particlesToMask() and particleTrailsToMask() for common particle
      rasterization use cases.
    - Added batch copying of AttributeArray values that significantly
      outperforms the older method that relied on a virtual function.

    Improvements:
    - Improved the responsiveness of the mesh to volume converter to interrupt
      requests.
    - Attempts to use a partially deserialized AttributeArray now errors.
    - Updated point deletion to use faster batch copying for ABI=6+.
    - Methods relating to in-memory Blosc compression for AttributeArrays now
      do nothing and have been marked deprecated resulting in memory savings
      for ABI=6+.

    Bug fixes: